accessing image permissions

--- a/Journal/Info.plist
+++ b/Journal/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need your photos to add to your journal</string>
 </dict>
 </plist>
